--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -14,5 +14,8 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          TIME_RANGE: last_30_days
           SHOW_TITLE: true
+          SHOW_TIME: false
+          COMMIT_MESSAGE: Updated the Readme
+          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
